--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.fst</groupId>
-	<artifactId>jedis</artifactId>
+	<artifactId>jedis-learn</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>jedis</name>
+	<name>jedis-learn</name>
 	<description>Demo project for jedis</description>
 
 	<parent>
